--- a/Javascript/Clase/index.html
+++ b/Javascript/Clase/index.html
@@ -13,7 +13,7 @@
 
 
 
-<script src="./script8.js"></script><!--Siempre al final-->
+<script src="./window.js"></script><!--Siempre al final-->
 </html>
 
 
