los reyes del mambo

--- a/Javascript/geo/Geo3.html
+++ b/Javascript/geo/Geo3.html
@@ -3,7 +3,7 @@
 <head>
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
     <title>Geo-Localización con Google Maps</title>
-    <script src="../Scripts/jquery-2.1.1.js"></script>
+    <script src="jquery-3.3.1.min.js"></script>
 </head>
 <body>
     <h2>Geo-Localización con Google Maps</h2><hr />
